--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -31,7 +31,7 @@ ru:
       login: 'Вход'
       logout: 'Выход'
       posts: 'Статьи'
-      about: 'О блоге...'
+      about: 'О сайте...'
       search: 'Поиск...'
 
   posts:
