--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -1,6 +1,7 @@
 ru:
   logo: '2байта'
   title: ' | 2байта'
+  description: 'Персональный сайт Сергея Резванова'
   welcome: 'Добро пожаловать!'
   copyright: '© 2011'
   follow: 'Следуйте за мной на'
