--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -1,7 +1,6 @@
 ru:
   logo: '2байта'
-  title: ' | 2байта'
-  description: 'Персональный сайт Сергея Резванова'
+  title: '2байта'
   welcome: 'Добро пожаловать!'
   copyright: '© 2011'
   follow: 'Следуйте за мной на'
