Moved to new domain name

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -1,6 +1,5 @@
 ru:
-  logo: '2байта'
-  title: '2байта'
+  title: 'Rezvanov.info'
   welcome: 'Добро пожаловать!'
   copyright: '© 2011'
   follow: 'Следуйте за мной на'
