--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -3,23 +3,6 @@ ru:
   welcome: 'Добро пожаловать!'
   copyright: '© 2011'
   follow: 'Следуйте за мной на'
-  rss: 'Подпишись на рассылку'
-
-  head:
-    title:
-      new: 'Добавить статью'
-      edit: 'Редактирование'
-      manage: 'Управление'
-      login: 'Вход'
-      posts: 'Блог'
-      about: 'Обо мне...'
-      search: 'Поиск...'
-      tag: 'Тег'
-
-  social:
-    linkedin: 'LinkedIn'
-    github: 'Github'
-    twitter: 'Twitter'
 
   date:
     formats:
@@ -34,39 +17,48 @@ ru:
       - :month
       - :year
 
+  common:
+    add: 'Добавить'
+    save: 'Сохранить'
+    back: 'Назад'
+    posts: 'Блог'
+    projects: 'Проекты'
+    search: 'Поиск...'
+    title: 'Заголовок'
+    ident: 'Идент.'
+    created_at: 'Дата создания'
+    published_at: 'Дата публикации'
+    edit: 'Редактировать'
+    destroy: 'Удалить'
+    count: 'всего'
+
+  head:
+    title:
+      edit: 'Редактирование'
+      tag: 'Тэг'
+      new_post: 'Добавление статьи'
+      new_project: 'Добавление проекта'
+      manage_posts: 'Управление статьями'
+      manage_projects: 'Управление проектами'
+
   shared:
     header:
-      new: 'Добавить статью'
+      home: 'Главная'
+      new_post: 'статью'
+      or: 'или'
+      new_project: 'проект'
       manage: 'Управление'
-      login: 'Вход'
       logout: 'Выход'
-      posts: 'Блог'
-      about: 'Обо мне...'
-      mailme: 'Жду писем'
-      search: 'Поиск...'
+
+  social:
+    linkedin: 'LinkedIn'
+    github: 'Github'
+    twitter: 'Twitter'
 
   posts:
-    manage:
-      ident: 'Идент.'
-      title: 'Заголовок'
-      created_at: 'Дата создания'
-      published_at: 'Дата публикации'
-      edit: 'Редактировать'
-      destroy: 'Удалить'
-
-    new:
-      add: 'Добавить'
-      back: 'Назад'
-
-    edit:
-      save: 'Сохранить'
-      back: 'Назад'
-
     form:
-      title: 'Заголовок'
       content: 'Содержимое'
       tags: 'Тэги'
-      publish_date: 'Дата публикации'
 
     post:
       read_more: 'Подробнее »'
@@ -79,14 +71,28 @@ ru:
       login: 'Логин'
       password: 'Пароль'
       sign_in: 'Войти'
-      back: 'Назад'
 
   tags:
     show:
-      tag_posts: 'Список статей с тегом'
-      count: 'всего'
+      tag_posts: 'Список статей с тэгом'
 
   searches:
     index:
       search_posts: 'Результат поиска статей по фразе'
-      count: 'всего'
+
+  projects:
+    project:
+      production_url: 'Сайт проекта'
+      source_url: 'Исходники'
+
+    form:
+      description: 'Описание'
+      image_url: 'Ссылка на картинку проекта'
+      production_url: 'Ссылка на сайт проекта'
+      source_url: 'Ссылка на исходники проекта'
+
+  pages:
+    home:
+      recently_posts: 'Недавние статьи...'
+      recently_projects: 'Недавние проекты...'
+      show_all: 'Показать все »'
