Minor design improvements

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -1,8 +1,8 @@
 ru:
   title: 'Rezvanov.info'
   welcome: 'Добро пожаловать!'
-  copyright: '© 2011'
-  follow: 'Следуйте за мной на'
+  copyright: '©'
+  follow: 'Следуйте за мной:'
 
   date:
     formats:
