--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -10,8 +10,6 @@ ru:
       datetime: '%d/%m/%Y %H:%M:%S'
       default: '%d %B, %Y'
 
-    month_names: [~, Январь, Февраль, Март, Апрель, Май, Июнь, Июль, Август, Сентябрь, Октябрь, Ноябрь, Декабрь]
-
     order:
       - :day
       - :month
@@ -92,8 +90,8 @@ ru:
 
   pages:
     home:
-      recently_posts: 'Недавние статьи...'
-      recently_projects: 'Недавние проекты...'
+      recently_posts: 'Последнее из блога...'
+      recently_projects: 'Мои проекты...'
       show_all: 'Показать все »'
 
   views:
