--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -18,60 +18,18 @@ ru:
       - :year
 
   common:
-    add: 'Добавить'
-    save: 'Сохранить'
     back: 'Назад'
     posts: 'Блог'
     projects: 'Проекты'
-    tags: 'Тэги'
-    snippets: 'Сниппеты'
-    search: 'Поиск...'
-    title: 'Заголовок'
-    ident: 'Идент.'
-    created_at: 'Дата создания'
-    published_at: 'Дата публикации'
-    edit: 'Редактировать'
-    destroy: 'Удалить'
-    count: 'всего'
-    name: 'Имя'
+
+  layouts:
+    application:
+      login: 'Скажи пароль!'
+      logout: 'Выход'
 
   head:
     title:
-      edit: 'Редактирование'
-      tag: 'Тэг'
-      new_post: 'Добавление статьи'
-      new_project: 'Добавление проекта'
-      new_tag: 'Добавление тэга'
-      new_snippet: 'Добавление сниппета'
-      admin_posts: 'Управление статьями'
-      admin_projects: 'Управление проектами'
-      admin_tags: 'Управление тэгами'
-      admin_snippets: 'Управление сниппетами'
       login: 'Вход'
-      posts_feed: 'Лента статей'
-      projects_feed: 'Лента проектов'
-
-  shared:
-    header:
-      home: 'Главная'
-      login: 'Вход'
-
-    manage_menu:
-      new_post: 'статью'
-      or: 'или'
-      new_project: 'проект'
-      admin: 'Управление'
-      logout: 'Выход'
-
-  posts:
-    post:
-      read_more: 'Подробнее »'
-
-    feed:
-      description: 'Лента сообщений блога'
-
-    show:
-      share: 'Пожалуйста, поделись ссылкой с друзьями:'
 
   sessions:
     form:
@@ -88,19 +46,7 @@ ru:
     home:
       posts: 'Блог'
       projects: 'Проекты'
-
-  views:
-    pagination:
-      truncate: '...'
-      first: '«'
-      previous: '←'
-      next: '→'
-      last: '»'
   
-  admin:
-    projects:
-      form:
-        description: 'Описание'
-        screenshot: 'Картинка проекта'
-        production_url: 'Ссылка на сайт проекта'
-        source_url: 'Ссылка на исходники проекта'
+  messages:
+    wrong_login_or_password: 'Неправильный логин или пароль'
+    welcome: 'Вы успешно вошли на сайт'
