--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -1,10 +1,10 @@
 ru:
   title: 'Rezvanov.info'
   welcome: 'Добро пожаловать!'
-  really?: 'Ты точно уверен?'
   about: Проектирование, разработка и поддержка веб-сайтов и веб-приложений.
          Разработка на ruby on rails с использованием tdd или bdd. А также аудит
          и консультирование по вопросам производительности веб-приложений.
+  
   date:
     formats:
       date: '%d/%m/%Y'
@@ -16,19 +16,32 @@ ru:
       - :month
       - :year
 
+  activerecord:
+    attributes:
+      post:
+        title: 'Заголовок'
+        published_at: 'Дата публикации'
+        body: 'Текст публикации'
+
   common:
     back: 'Назад'
     posts: 'Блог'
     projects: 'Проекты'
+    cms: 'Админка'
+    logout: 'Выход'
+
+  messages:
+    really?: 'Ты точно уверен?'
+    wrong_login_or_password: 'Неправильный логин или пароль'
+    welcome: 'Вы успешно вошли на сайт'
+    forbidden: 'Доступ запрещен'
 
   layouts:
     application:
       login: 'Скажи пароль!'
-      logout: 'Выход'
 
-  head:
-    title:
-      login: 'Вход'
+    admin:
+      home: 'На главную'
 
   sessions:
     form:
@@ -36,17 +49,18 @@ ru:
       password: 'Пароль'
       sign_in: 'Войти'
 
-  projects:
-    project:
-      production_url: 'Сайт проекта'
-      source_url: 'Исходники'
+  admin:
+    posts:
+      index:
+        new_post: 'Новая публикация'
+        title: 'Заголовок'
+        created_at: 'Создана'
+        edit: 'Редактировать'
+        delete: 'Удалить'
 
-  pages:
-    home:
-      posts: 'Блог'
-      projects: 'Проекты'
-  
-  messages:
-    wrong_login_or_password: 'Неправильный логин или пароль'
-    welcome: 'Вы успешно вошли на сайт'
-    forbidden: 'Доступ запрещен'
+      form:
+        new: 'Создание публикации'
+        edit: 'Редактирование публикации'
+        save: 'Сохранить'
+        preview: 'Просмотр'
+        cancel: 'Отмена'
