Fix page titles

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -1,6 +1,4 @@
 ru:
-  title: 'Rezvanov.info'
-  welcome: 'Добро пожаловать!'
   about: Проектирование, разработка и поддержка веб-сайтов и веб-приложений.
          Разработка на ruby on rails с использованием tdd или bdd. А также аудит
          и консультирование по вопросам производительности веб-приложений.
@@ -52,6 +50,9 @@ ru:
 
     admin:
       home: 'На главную'
+
+    login:
+      login: 'Вход'
 
   sessions:
     form:
